# Kronos

libretro/: libretro.c
yabause/src/: CMakeLists.txt  perlinuxjoy.c  vidogl.c  vidogl.h  vidsoft.c  yabause.c  ygl.h  ygles.c  yglshaderes.c
yabause/src/gllibs/glew/: glew.c
yabause/src/linux/: CMakeLists.txt  main.c  main_gl_test.c
yabause/src/linux/platform/glfw/: platform.c
yabause/src/linux/platform/x11/: platform.c  platform.h
yabause/src/qt/: YabauseGL.cpp  main.cpp
yabause/src/sdl/: CMakeLists.txt  main.c
